<resources>
    <string name="app_name">Quiz Lab</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="quiz">Quiz</string>
    <string name="sign_btn">Sign In</string>
    <string name="txt_dont_have_acc">Don\'t have an account?</string>
    <string name="txt_sign_up">Sign Up</string>

</resources>