<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="316dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signHeader"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="317dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="handleSignClick"
        android:text="@string/sign_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="222dp"
        android:layout_height="60dp"
        android:text="@string/txt_dont_have_acc"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSign"
        app:layout_constraintVertical_bias="0.734" />

    <TextView
        android:id="@+id/btnChangeSignOption"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:onClick="handleChangeSignOption"
        android:text="@string/txt_sign_up"
        android:textAlignment="center"
        android:textColor="@color/custom_one"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.228" />
</androidx.constraintlayout.widget.ConstraintLayout>